[package]
name = "lugia-dav"
version = "0.1.0"
edition = "2021"
default-run = "lugia-dav"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
strip = true

[dependencies]
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
dav-server = { version = "0.5", default-features = false, features = ["localfs", "warp-compat"] }
# dav-server = { path = "../dav-server-rs", default-features = false, features = ["localfs", "warp-compat"] }
env_logger = { version = "0.10", default-features = false, features = ["humantime", "auto-color"] }
futures-util = "0.3"
hex = "0.4"
log = "0.4"
rand = { version = "0.8", optional = true }
sha2 = "0.10"
tokio = { version = "1.35", features = ["fs", "sync", "time", "macros", "rt-multi-thread"] }
warp = { version = "0.3", default-features = false, features = ["tls"] }

[[bin]]
name = "login"
path = "src/bin/login.rs"
required-features = ["rand"]
