[package]
name = "lugia-dav"
version = "0.1.0"
edition = "2021"
default-run = "lugia-dav"

[profile.release]
lto = "thin"
strip = true

[dependencies]
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.36", features = ["serde", "serialize"] }
clap = { version = "4.4", features = ["derive"] }
env_logger = { version = "0.11", default-features = false, features = [
    "humantime",
    "auto-color",
] }
log = "0.4"
mime_guess = "2.0"
tiny_http = { version = "0.12", features = ["ssl-rustls"] }
rand = { version = "0.8", optional = true }

[[bin]]
name = "login"
path = "src/bin/login.rs"
required-features = ["rand"]
